Add images to the website and change the layout.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <nav>
             <div class="navbar">
                 <!-- img -->
-                <img src="resources/mypic.JPG" width=85 alt="Chisapat" srcset="" class="logo">
+                <img src="resources/mypic.JPG" width=80 alt="Chisapat" srcset="" class="logo">
                 
-                <a href="#contact"><b>CONTACT</b></a>
-                <a href="#about me"><b>ABOUT</b></a>
-                <a href="#home"><b>HOME</b></a>
+                <a href="#home"><b>Home</b></a>
+                <a href="#about me"><b>About</b></a>
+                <a href="#contact"><b>Contact</b></a>
+                <a href=http://127.0.0.1:3000/myjourney.html target="_self"><b>My Journey</b></a>
+                <a href=http://127.0.0.1:3000/myfuture.html target="_self"><b>My Future</b></a>
 
             </div>
         </nav>
