--- a/myfuture.html
+++ b/myfuture.html
@@ -8,38 +8,35 @@
 </head>
 
 <body>
-
+    <!-- header start -->
     <header>
 
         <h1>My Future</h1>
 
     </header>
+    <!-- header end -->
+
 
     <!-- navbar start -->
     <nav>
-        <a href="#goals">Goals</a>
-        <a href="#skills">Skills</a>
-        <a href="#plans">Plans</a>
+        
+        <a href=http://127.0.0.1:3000/index.html target="_self"><b>Home</b></a>
+
     </nav>
     <!-- navbar end -->
     
     <!-- main start -->
     <main>
 
+        <img src="resources/happywork.jpg" width=350 alt="happywork" srcset="" class="pic">
+
         <section id="goals">
             <h2>My Goals</h2>
-            <p></p>
+            <p>--------------------</p>
+            <p>เป้าหมายของดิฉัน คือ เรียนจบภายใน 4 ปี หลังจากนั้นมีงานทำที่มั่นคงและได้ทำงานตรงตามสายที่เรียนจบมา ได้ทำงานในบริษัทที่ต้องการ มีเงินเดือน 
+             สามารถให้เงินเดือนคุณพ่อและคุณแม่ได้ ไม่ทำให้ทางบ้านต้องลำบาก มีความสุขกับการเรียนรู้อะไรใหม่ ๆ และการทำงาน</p>
         </section>
 
-        <section id="skills">
-            <h2>My Skills</h2>
-            <P></P>
-        </section>
-
-        <section id="plans">
-            <h2>My Plans</h2>
-            <p></p>
-        </section>
     </main>
     <!-- main start -->
 
