--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a href="#home"><b>Home</b></a>
                 <a href="#about me"><b>About</b></a>
                 <a href="#contact"><b>Contact</b></a>
-                <a href="myjourney.html" target="_blank"><b>My Journey</b></a>
-                <a href="myfuture.html" target="_blank"><b>My Future</b></a>
+                <a href="myjourney.html" target="_self"><b>My Journey</b></a>
+                <a href="myfuture.html" target="_self"><b>My Future</b></a>
 
             </div>
         </nav>
